# Rack

./: .astylerc  .gitignore  .gitmodules  .gitmodules__REMOVED  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE-OF-CONDUCT.md  Component.plist  Core.json  Distribution.xml  Entitlements.plist  Info.plist  LICENSE-BSD.txt  LICENSE-dist.md  LICENSE-dist.txt  LICENSE.md  Makefile  Makefile-plugin.inc  Makefile.inc  README.md  README.txt  Rack.res  Rack.sb  Rack.sh  arch.mk  astyle.sh  azure-pipelines.yml  build.txt  compile.mk  conan_profile_mingw8.2  conanfile.txt  create_assets.sh  dep.mk  helper.py  icon.icns  installer.nsi  make.objects  makefile.linux  makefile.msvc  (+23 more)
dep/speexdsp-SpeexDSP-1.2rc3/: .cvsignore  .gitignore  ChangeLog  Doxyfile  INSTALL  Makefile.am  NEWS  README  README.Trimedia  README.blackfin  README.win32  SpeexDSP.kdevelop  SpeexDSP.spec.in  TODO  autogen.sh  config.h  configure.ac  make.objects  makefile.linux  makefile.msvc  regressions  speexdsp.pc.in
dep/speexdsp-SpeexDSP-1.2rc3/doc/: Makefile.am  celp_decoder.eps  celp_decoder.odg  components.eps  components.odg  echo_path.eps  echo_path.odg  manual.lyx  programming.html  ref_shaping.eps  sampledec.c  sampleenc.c  speex_abs.eps  speex_abs.odg  speex_analysis.eps  speex_analysis.odg
dep/speexdsp-SpeexDSP-1.2rc3/html/: speex.webprj  speex.xcf
dep/speexdsp-SpeexDSP-1.2rc3/include/speex/: Makefile.am  speex_buffer.h  speex_echo.h  speex_jitter.h  speex_preprocess.h  speexdsp_config_types.h.in  speexdsp_types.h
dep/speexdsp-SpeexDSP-1.2rc3/libspeexdsp/: .cvsignore  Makefile.am  bfin.h  buffer.c  fftwrap.c  fixed_bfin.h  jitter.c  misc_bfin.h  os_support.h  preprocess.c  resample.c  scal.c  testdenoise.c  testecho.c  testjitter.c  testresample.c
dep/speexdsp-SpeexDSP-1.2rc3/macosx/: Info.plist  Speex_Prefix.pch
dep/speexdsp-SpeexDSP-1.2rc3/macosx/English.lproj/: InfoPlist.strings
dep/speexdsp-SpeexDSP-1.2rc3/macosx/Speex.xcodeproj/: project.pbxproj
dep/speexdsp-SpeexDSP-1.2rc3/macosx/Speex_UB.xcodeproj/: project.pbxproj
dep/speexdsp-SpeexDSP-1.2rc3/regression-fixes/: 1-resampler_unsigned_fix.patch
dep/speexdsp-SpeexDSP-1.2rc3/symbian/: Makefile.am  bld.inf  speex.mmp
dep/speexdsp-SpeexDSP-1.2rc3/ti/: Makefile.am  os_support_custom.h
dep/speexdsp-SpeexDSP-1.2rc3/ti/speex_C54_test/: Makefile.am  speex_C54_test.cmd  speex_C54_test.pjt
dep/speexdsp-SpeexDSP-1.2rc3/ti/speex_C55_test/: Makefile.am  speex_C55_test.cmd  speex_C55_test.pjt
dep/speexdsp-SpeexDSP-1.2rc3/ti/speex_C64_test/: Makefile.am  speex_C64_test.cmd  speex_C64_test.pjt
dep/speexdsp-SpeexDSP-1.2rc3/tmv/: _kiss_fft_guts_tm.h  fftwrap_tm.h  filterbank_tm.h  fixed_tm.h  kiss_fft_tm.h  kiss_fftr_tm.h  mdf_tm.h  misc_tm.h  preprocess_tm.h  profile_tm.h  speex_config_types.h
dep/speexdsp-SpeexDSP-1.2rc3/win32/: Makefile.am  libspeexdsp.def  speex.iss
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2003/: libspeexdsp.sln
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2003/libspeexdsp/: Makefile.am  libspeexdsp.vcproj
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2003/tests/: testdenoise.vcproj  testecho.vcproj  testresample.vcproj
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2005/: libspeexdsp.sln
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2005/libspeexdsp/: libspeexdsp.vcproj
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2005/tests/: testdenoise.vcproj  testecho.vcproj  testresample.vcproj
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2008/: Makefile.am  UpgradeLog.htm  libspeexdsp.sln
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2008/Backup/: libspeexdsp.sln
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2008/libspeexdsp/: libspeexdsp.vcproj  libspeexdsp.vcxproj  libspeexdsp.vcxproj.filters
dep/speexdsp-SpeexDSP-1.2rc3/win32/VS2008/tests/: Makefile.am  testdenoise.vcproj  testdenoise.vcxproj  testdenoise.vcxproj.filters  testecho.vcproj  testecho.vcxproj  testecho.vcxproj.filters  testresample.vcproj  testresample.vcxproj  testresample.vcxproj.filters
dep/speexdsp-SpeexDSP-1.2rc3/win32/libspeexdsp/: Makefile.am  libspeexdsp.dsp  libspeexdsp.dsw  libspeexdsp_dynamic.dsp
plugins/community/repos/DHE-Modules/: .appveyor.yml  .gitignore  CMakeLists.txt  DHE-Modules.json  LICENSE.txt  Makefile  make.objects  makefile.linux  makefile.msvc  plugin.json
plugins/community/repos/DHE-Modules/docker/: Makefile  make-all.sh
plugins/community/repos/DHE-Modules/gui/: .envrc  .gitignore  Gemfile  Rakefile  _config.yaml
plugins/community/repos/DHE-Modules/plugin/: .gitignore  CMakeLists.txt
plugins/community/repos/DHE-Modules/script/: appveyor-build.sh  build-rack.sh
plugins/community/repos/DHE-Modules/test/: booster-stage-tests.cpp  stage-tests.cpp  swave-tests.cpp  upstage-tests.cpp
plugins/community/repos/LindenbergResearch/: .gitignore  CMakeLists.txt  Makefile  README.md  make.objects  makefile.linux  makefile.msvc
plugins/community/repos/LindenbergResearch/design/: AlmaAged.afdesign  AlmaLight.afdesign  AlternateBigKnob.afdesign  AlternateBigLight.afdesign  AlternateMiddleLight.afdesign  AlternatePatina.afdesign  AlternateScrewLight.afdesign  AlternateSmallKnob.afdesign  AlternateSmallLight.afdesign  AlternateSmallToggleLight.afdesign  AlternateToggleKnobLight.afdesign  BigKnob.afdesign  BlankPanel.afdesign  BlankPanelAged.afdesign  BlankPanelLight.afdesign  BlankPanelM1.afdesign  BlankPanelM1Aged.afdesign  BlankPanelM1Light.afdesign  BlankPanelSmallAged.afdesign  BlankPanelSmallLight.afdesign  ClassicPatina.afdesign  CogBig.afdesign  CogMiddle.afdesign  CogSmall.afdesign  Cogs.afdesign  DiodeLadderVCF.afdesign  DiodeLadderVCFAged.afdesign  DiodeLadderVCFClassic.afdesign  IOPortBLight.afdesign  IOPortC.afdesign  IOPortCLight.afdesign  Korg35VCF.afdesign  LCDFrameAged.afdesign  LCDFrameDark.afdesign  LCDFrameLight.afdesign  LaikaPatina.afdesign  LogoSmallPlate.afdesign  MS20.afdesign  MS20Aged.afdesign  MS20Light.afdesign  (+25 more)
plugins/community/repos/LindenbergResearch/res/: AlternateBigKnob.afdesign  AlternateMiddleKnob.afdesign  AlternateSmallKnob.afdesign  BigKnob.afdesign  BlankPanel.afdesign  BlankPanelM1.afdesign  BlankPanelSmall.afdesign  CogBig.afdesign  CogSmall.afdesign  (+20 more)
(+6856 files in other folders)
